# Android-Samples

AndroidCamera/: import-summary.txt  settings.gradle
AndroidCamera/app/: build.gradle
AndroidCamera/gradle/wrapper/: gradle-wrapper.properties
AndroidCamera/opencv_sdk/: build.gradle
AndroidCamera/openglcamera/: CMakeLists.txt  build.gradle  local.properties
AndroidCamera/openglcamera/gradle/wrapper/: gradle-wrapper.properties
AndroidCamera/openglcamera/src/androidTest/java/com/sunmi/openglcamera/: ExampleInstrumentedTest.java
AndroidCamera/openglcamera/src/main/: AndroidManifest.xml
AndroidCamera/openglcamera/src/main/cpp/: native-lib.cpp
AndroidCamera/openglcamera/src/main/java/com/sunmi/openglcamera/: MainActivity.java  MyGLSurfaceView.java
AndroidCamera/openglcamera/src/main/res/layout/: activity_main.xml
AndroidCamera/openglcamera/src/main/res/values/: strings.xml
AndroidCamera/openglcamera/src/test/java/com/sunmi/openglcamera/: ExampleUnitTest.java
AndroidOpenGL/: build.gradle
AndroidOpenGL/app/: build.gradle
AndroidOpenGL/gradle/wrapper/: gradle-wrapper.properties
AudioTrack/app/: build.gradle
BluetoothSpp/: README.md  build.gradle
BluetoothSpp/app/: build.gradle  proguard-rules.pro
FaceDlibOpencv/FaceDlibOpencv/: local.properties
MemFree/: build.gradle
MemFree/app/: build.gradle
MmLeak/: build.gradle
MmLeak/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
OpenSLES/app/: CMakeLists.txt  build.gradle
Sdcard/app/: build.gradle
looper/app/: build.gradle
serial/app/: CMakeLists.txt  build.gradle
(+97 files in other folders)
